force-app/main/default/objects/User_Time_Tracking__c/User_Time_Tracking__c.object-meta.xml
<CustomObject>
    <label>User Time Tracking</label>
    <nameField>
        <displayFormat>UTTN-{0000}</displayFormat>
        <label>User Time Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Time Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>