force-app/main/default/objects/User_Time_Tracking__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <formula>TEXT( User_Entry__r.Cost_Center__c )</formula>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>