force-app/main/default/objects/User_Time_Tracking__c/fields/Staff_Status__c.field-meta.xml
<CustomField>
    <fullName>Staff_Status__c</fullName>
    <formula>TEXT(User_Entry__r.Staff_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Status</label>
    <type>Text</type>
</CustomField>