force-app/main/default/objects/User_Time_Tracking__c/fields/Time_Tracking_Required__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracking_Required__c</fullName>
    <formula>TEXT(User_Entry__r.Time_Tracking_Required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Tracking Required</label>
    <type>Text</type>
</CustomField>