force-app/main/default/objects/User_Time_Tracking__c/fields/User_Entry__c.field-meta.xml
<CustomField>
    <fullName>User_Entry__c</fullName>
    <label>User Entry</label>
    <referenceTo>User_Entry__c</referenceTo>
    <relationshipLabel>User Time Trackings</relationshipLabel>
    <relationshipName>User_Time_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>